# git-syn-v2

./: .gitignore  .gitlab-ci.yml  .gitremotes  .indent.pro  CHANGELOG.md  CONTRIBUTING.md  COPYING  Dockerfile  Makefile  Makefile.am  README  README.md  bootstrap.sh  configure.ac  mkdocs.yml
doc/man/: git-syn.1.md  git_syn.1.md
doc/theme/: main.html
src/: Makefile.am  config.c  git-syn.c  git-syn.h  install.c  main.c  syn.h  usage.c  util.c
src/example/: ecl.c  ecldemo.c  http.c  libyamldemo.c  microhttpdemo.c
src/hook/: pre-push.sh
tests/: check_http.c
